--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             <div class="top_text">
                 <h1>Greatest Show On The Earth</h1>
                 <p>The FIFA World Cup is the most prestigious soccer competition in the world. Played every four years,
-                    the World Cup hosts
-                    the top 32 national teams in a monthlong tournament.</p>
+                    the World Cup hosts the top 32 national teams in a monthlong tournament.</p>
                 <button class="btn" type="submit">Watch Live <i class="fa-solid fa-arrow-right"></i></button>
             </div>
             <div class="top_img">
